src/compiler/tests/invalid/invalid_program1/invalid_program1.klt
var a: Int = 6;
var b: Int;

fun max(num1: Int; num2: Int): Int {

    var res: Int;

    a = false; // TIPO ERRONEO
    b = 10;

    if (num1 < num2 and true) {
        res = num2;
    } else {
        res; // ERROR GRAMATICAL
    }
    // FALTA RETURN
}

fun main (a: Int; b: Boolean) : None {
    var c: Int;
    var d: String = "Hola mundo!";
    var e: Int;

    c = 30 + 2 * 3;
    d = a / d; // OPERACION CON INT Y STRING
    e = max(a, b);

    print("El numero mas grande es...");
    print(c);
}
